<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/offset_m"
        android:paddingEnd="@dimen/offset_m">

        <TextView
            style="@style/AppTheme.Pajamas.AboutScreen.TextView.H2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_subheading_what_is"/>

        <TextView
            style="@style/AppTheme.Pajamas.AboutScreen.TextView.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_body_what_is"/>

        <TextView
            style="@style/AppTheme.Pajamas.AboutScreen.TextView.H2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_subheading_how_to"/>

        <TextView
            style="@style/AppTheme.Pajamas.AboutScreen.TextView.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_body_how_to"/>

    </LinearLayout>

</ScrollView>