<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/offset_s">

        <EditText
            android:id="@+id/view_record_stem_et_stem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondaryDark"
            android:hint="Stem name"/>

        <LinearLayout
            style="@style/AppTheme.Pajamas.RecordScreen.Stem.Options"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/AppTheme.Pajamas.RecordScreen.Stem.Options.Button"
                android:id="@+id/view_record_stem_btn_play"
                android:text="@string/stem_play"/>

            <Button
                style="@style/AppTheme.Pajamas.RecordScreen.Stem.Options.Button"
                android:id="@+id/view_record_stem_btn_record"
                android:layout_marginEnd="@dimen/offset_s"
                android:layout_marginStart="@dimen/offset_s"
                android:text="@string/stem_record"/>

            <Button
                style="@style/AppTheme.Pajamas.RecordScreen.Stem.Options.Button"
                android:id="@+id/view_record_stem_btn_remove"
                android:text="@string/stem_remove"/>

        </LinearLayout>

    </LinearLayout>
</merge>